--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 node_modules/
 jspm_packages/
 
+
 # TypeScript v1 declaration files
 typings/
 
@@ -52,6 +53,9 @@ typings/
 
 # Optional eslint cache
 .eslintcache
+
+# Optional eslint ignore
+.eslintignore
 
 # Microbundle cache
 .rpt2_cache/
@@ -81,6 +85,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+build
 
 # Gatsby files
 .cache/
