--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "mongoose": "^5.11.14",
+    "mongoose-currency": "^0.2.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
