--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.14",
     "mongoose-currency": "^0.2.0",
