--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "lint:fix": "eslint server client --fix",
     "eslint-check": "eslint --print-config .eslintrc.js"
   },
-  "dependencies": {
-    "passport-local-mongoose": "^6.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
