--- a/server/package.json
+++ b/server/package.json
@@ -57,6 +57,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
