--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.2"
