--- a/server/package.json
+++ b/server/package.json
@@ -41,12 +41,15 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/register": "^7.12.13",
+    "@google-cloud/storage": "^5.7.4",
+    "babel-plugin-inline-json-import": "^0.3.2",
     "babel-watch": "^7.3.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase-admin": "^9.4.2",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
